# flapy-bird-bevy

./: Cargo.toml  README.md
src/: animations.rs  components.rs  contacts.rs  despawn.rs  main.rs  player.rs  state.rs
src/obstacle/: mod.rs  obstacle.rs
src/player/: camera.rs  contacts.rs  gravity.rs  gravity_and_move.rs  mod.rs  player.rs
