[package]
name = "flappy-bird-bevy"
version = "0.1.0"
authors = ["Ajinkya <ajinkyab1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy", commit="1398d78"}
rand = "0.7.3"
bevy_rapier2d = { git = "https://github.com/alec-deason/bevy_rapier/", branch="update_to_latest_bevy_changes" }

# Ensure crates reference the same versions
# or customize a sub-crate version
[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" ,  commit="1398d78"}
