[package]
name = "flappy-bird-bevy"
version = "0.1.0"
authors = ["Ajinkya <ajinkyab1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy", commit="1398d78"}
rand = "0.7.3"
